cmake_minimum_required(VERSION 3.15)
project(atcoder)

set(CMAKE_CXX_STANDARD 14)

add_executable(abc321f abc321f.cpp)
add_executable(dp_o dp_o.cpp)
add_executable(dp_v dp_v.cpp)
add_executable(abc197_f abc197_f.cpp)
add_executable(arc084_b arc084_b.cpp)
add_executable(abc282_e abc282_e.cpp)
add_executable(abc267_f abc267_f.cpp)