cmake_minimum_required(VERSION 3.15)
project(cf)

set(CMAKE_CXX_STANDARD 17)

add_executable(cf main.cpp)
add_executable(1926A 1926A.cpp)
add_executable(1926B 1926B.cpp)
add_executable(1926C 1926C.cpp)
add_executable(1950A 1950A.cpp)
add_executable(1950B 1950B.cpp)
add_executable(1950C 1950C.cpp)
add_executable(1950D 1950D.cpp)
add_executable(453B 453B.cpp)
add_executable(1418C 1418C.cpp)
add_executable(1082E 1082E.cpp)
add_executable(919D 919D.cpp)
add_executable(510C 510C.cpp)
add_executable(1385E 1385E.cpp)
add_executable(1627E 1627E.cpp)
add_executable(1627E_2.cpp 1627E_2.cpp)
add_executable(1627E_3.cpp 1627E_3.cpp)
add_executable(472D 472D.cpp)
add_executable(1513D 1513D.cpp)
add_executable(101102D 101102D.cpp)
add_executable(837D 837D.cpp)
add_executable(1995A 1995A.cpp)
add_executable(1995B1 1995B1.cpp)
add_executable(1995B1_2 1995B1_2.cpp)
add_executable(1995D 1995D.cpp)
add_executable(687C 687C.cpp)
add_executable(1051F 1051F.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(118D 118D.cpp)
add_executable(698A 698A.cpp)
add_executable(1207C 1207C.cpp)
add_executable(607B 607B.cpp)
add_executable(1842C 1842C.cpp)
add_executable(835D 835D.cpp)
add_executable(1525C 1525C.cpp)
add_executable(1509C 1509C.cpp)
add_executable(103886E 103886E.cpp)
add_executable(1637D 1637D.cpp)
add_executable(103886L 103886L.cpp)
add_executable(597C 597C.cpp)
add_executable(597C_2 597C_2.cpp)
add_executable(1942D 1942D.cpp)

#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")