cmake_minimum_required(VERSION 3.15)
project(cses)

set(CMAKE_CXX_STANDARD 14)

add_executable(1734 1734.cpp)
add_executable(1739 1739.cpp)
add_executable(1137 1137.cpp)
add_executable(test test.cpp)
add_executable(1688 1688.cpp)
add_executable(2169 2169.cpp)
add_executable(1081 1081.cpp)
add_executable(2164 2164.cpp)
add_executable(1717 1717.cpp)
add_executable(2064 2064.cpp)
add_executable(1142 1142.cpp)
add_executable(1147 1147.cpp)
add_executable(1748 1748.cpp)
add_executable(2102 2102.cpp)
add_executable(1683 1683.cpp)
add_executable(1665 1665.cpp)
add_executable(1678 1678.cpp)
add_executable(1665_2 1665_2.cpp)
add_executable(1734_2 1734_2.cpp)
add_executable(2419 2419.cpp)
add_executable(2169_2 2169_2.cpp)
add_executable(1426 1426.cpp)

add_library(cses library.cpp library.h)