cmake_minimum_required(VERSION 3.28)
project(cses2)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)

add_executable(1068 1068.cpp)
add_executable(1083 1083.cpp)
add_executable(1069 1069.cpp)
add_executable(1094 1094.cpp)
add_executable(1070 1070.cpp)
add_executable(1071 1071.cpp)
add_executable(1072 1072.cpp)
add_executable(1092 1092.cpp)
add_executable(1617 1617.cpp)
add_executable(1618 1618.cpp)
add_executable(1754 1754.cpp)
add_executable(1755 1755.cpp)
add_executable(2205 2205.cpp)
add_executable(2165 2165.cpp)
add_executable(1622 1622.cpp)
add_executable(1623 1623.cpp)
add_executable(1624 1624.cpp)
add_executable(2431 2431.cpp)
add_executable(1625 1625.cpp)

add_executable(1621 1621.cpp)
add_executable(1084 1084.cpp)
add_executable(1090 1090.cpp)
add_executable(1091 1091.cpp)
add_executable(1619 1619.cpp)
add_executable(1629 1629.cpp)
add_executable(1640 1640.cpp)
add_executable(1643 1643.cpp)
add_executable(1074 1074.cpp)
add_executable(2183 2183.cpp)
add_executable(2216 2216.cpp)
add_executable(2217 2217.cpp)
add_executable(1141 1141.cpp)
add_executable(1073 1073.cpp)
add_executable(1163 1163.cpp)
add_executable(2162 2162.cpp)
add_executable(2163 2163.cpp)
add_executable(2168 2168.cpp)
add_executable(1164 1164.cpp)
add_executable(1620 1620.cpp)
add_executable(1630 1630.cpp)
add_executable(1631 1631.cpp)
add_executable(1641 1641.cpp)
add_executable(1642 1642.cpp)
add_executable(1645 1645.cpp)
add_executable(1660 1660.cpp)
add_executable(1661 1661.cpp)
add_executable(1662 1662.cpp)
add_executable(2428 2428.cpp)
add_executable(1085 1085.cpp)
add_executable(1076 1076.cpp)
add_executable(1077 1077.cpp)
add_executable(1632 1632.cpp)
add_executable(1644 1644.cpp)

add_executable(1633 1633.cpp)
add_executable(1634 1634.cpp)
add_executable(1635 1635.cpp)
add_executable(1636 1636.cpp)
add_executable(1637 1637.cpp)
add_executable(1638 1638.cpp)
add_executable(1158 1158.cpp)
add_executable(1746 1746.cpp)
add_executable(2413 2413.cpp)
add_executable(2413_2 2413_2.cpp)
add_executable(1639 1639.cpp)
add_executable(1744 1744.cpp)
add_executable(1745 1745.cpp)
add_executable(1097 1097.cpp)
add_executable(1093 1093.cpp)
add_executable(1145 1145.cpp)
add_executable(1140 1140.cpp)
add_executable(1653 1653.cpp)
add_executable(2181 2181.cpp)
add_executable(2220 2220.cpp)

add_executable(1192 1192.cpp)
add_executable(1193 1193.cpp)
add_executable(1666 1666.cpp)
add_executable(1667 1667.cpp)
add_executable(1668 1668.cpp)
add_executable(1678 1678.cpp)
add_executable(1669 1669.cpp)
add_executable(1194 1194.cpp)
add_executable(1671 1671.cpp)
add_executable(1672 1672.cpp)
add_executable(1673 1673.cpp)
add_executable(1198 1195.cpp)
add_executable(1197 1197.cpp)
add_executable(1196 1196.cpp)
add_executable(1679 1679.cpp)
add_executable(1680 1680.cpp)
add_executable(1681 1681.cpp)
add_executable(1202 1202.cpp)
add_executable(1750 1750.cpp)
add_executable(1160 1160.cpp)
add_executable(1751 1751.cpp)
add_executable(1675 1675.cpp)


add_executable(1687 1687.cpp)
add_executable(1688 1688.cpp)
