cmake_minimum_required(VERSION 3.15)
project(kattis)

set(CMAKE_CXX_STANDARD 17)

add_executable(kattis main.cpp)
add_executable(megainversions megainversions.cpp)
add_executable(quantumsuperposition quantumsuperposition.cpp)
add_executable(robotturtles robotturtles.cpp)
add_executable(railway2 railway2.cpp)
add_executable(railway2_2 railway2_2.cpp)