cmake_minimum_required(VERSION 3.28)
project(other)

set(CMAKE_CXX_STANDARD 17)

add_executable(other main.cpp)
add_executable(1954 1954.cpp)
add_executable(1689 1689.cpp)
add_executable(infoarena_rangemode infoarena_rangemode.cpp)
add_executable(kilonova_2642 kilonova_2642.cpp)
add_executable(kilonova_2165 kilonova_2165.cpp)
add_executable(kilonova_0619 kilonova_0619.cpp)
add_executable(kilonova_0076 kilonova_0076.cpp)
add_executable(kilonova_939 kilonova_939.cpp)
add_executable(kilonova_2111 kilonova_2111.cpp)
add_executable(kilonova_0153 kilonova_0153.cpp)
add_executable(kilonova_2290 kilonova_2290.cpp)
add_executable(aaa aaa.cpp)

add_executable(kilonova_0076_2 kilonova_0076_2.cpp)
add_executable(dmoj_apio12p1 dmoj_apio12p1.cpp)
add_executable(dmoj_ccc21s5 dmoj_ccc21s5.cpp)
add_executable(dmoj_ccc21s5_2 dmoj_ccc21s5_2.cpp)