cmake_minimum_required(VERSION 3.15)
project(usaco)

set(CMAKE_CXX_STANDARD 14)

add_executable(265 265.cpp)
add_executable(435 435.cpp)
add_executable(1307 1307.cpp)
add_executable(test test.cpp)
add_executable(1115 1115.cpp)
add_executable(814 814.cpp)
add_executable(576 576.cpp)
add_executable(921 921.cpp)
add_executable(1019 1019.cpp)
add_executable(529 529.cpp)
add_executable(623 623.cpp)
add_executable(623_2 623_2.cpp)
add_executable(743 743.cpp)
add_executable(720 720.cpp)
add_executable(620 620.cpp)
add_executable(992 992.cpp)
add_executable(1211 1211.cpp)
add_executable(1138 1138.cpp)
add_executable(970 970.cpp)
add_executable(970_2 970_2.cpp)
add_executable(970_3 970_3.cpp)
add_executable(970_4 970_4.cpp)
add_executable(970_5 970_5.cpp)
add_executable(696 696.cpp)
add_executable(361 361.cpp)
add_executable(695 695.cpp)
add_executable(282 282.cpp)
add_executable(282_2 282_2.cpp)
add_executable(282_3 282_3.cpp)
#add_executable(597 597.cpp)
add_executable(621 621.cpp)
add_executable(227 227.cpp)
add_executable(363 363.cpp)
add_executable(228 228.cpp)
add_executable(246 246.cpp)
add_executable(345 345.cpp)
add_executable(193 193.cpp)
add_executable(244 244.cpp)
add_executable(512 512.cpp)
add_executable(842 842.cpp)
add_executable(842_2 842_2.cpp)
add_executable(575 575.cpp)
add_executable(995  995.cpp)
add_executable(1065 1065.cpp)
add_executable(1066 1066.cpp)
add_executable(1067 1067.cpp)
add_executable(1090 1090.cpp)
add_executable(1091 1091.cpp)
add_executable(1091_2 1091_2.cpp)
add_executable(1137 1137.cpp)
add_executable(1161 1161.cpp)
add_executable(main main.cpp)
add_executable(1163 1163.cpp)
add_executable(1185 1185.cpp)
add_executable(1186 1186.cpp)
add_executable(1209 1209.cpp)
add_executable(1209_2 1209_2.cpp)
add_executable(1210 1210.cpp)
add_executable(1210_2 1210_2.cpp)
add_executable(1233 1233.cpp)
add_executable(1234 1234.cpp)
add_executable(1257 1257.cpp)
add_executable(1257_2 1257_2.cpp)
add_executable(1258 1258.cpp)
add_executable(1258_2 1258_2.cpp)
add_executable(1258_3 1258_3.cpp)
add_executable(1259 1259.cpp)
add_executable(1259_2 1259_2.cpp)
add_executable(1281 1281.cpp)
add_executable(1282 1282.cpp)
add_executable(1283 1283.cpp)
add_executable(1307_2 1307_2.cpp)
add_executable(1329 1329.cpp)
add_executable(1330 1330.cpp)
add_executable(1331 1331.cpp)
add_executable(1089 1089.cpp)
add_executable(1020 1020.cpp)
add_executable(401 401.cpp)
add_executable(1307_3 1307_3.cpp)
add_executable(1353 1353.cpp)
add_executable(1377 1377.cpp)
add_executable(1378 1378.cpp)
add_executable(1379 1379.cpp)
add_executable(1401 1401.cpp)
add_executable(1402 1402.cpp)
add_executable(1402_2 1402_2.cpp)
add_executable(1402_3 1402_3.cpp)
add_executable(1402_4 1402_4.cpp)
add_executable(1403 1403.cpp)
add_executable(1426 1426.cpp)
add_executable(1426_2 1426_2.cpp)
add_executable(1427 1427.cpp)
add_executable(1427_2 1427_2.cpp)
add_executable(1427_3 1427_3.cpp)
add_executable(1427_4 1427_4.cpp)
add_executable(230 230.cpp)
add_executable(1449 1449.cpp)
add_executable(1449_2 1449_2.cpp)
add_executable(1451 1451.cpp)
add_executable(1450 1450.cpp)
add_executable(1450_2 1450_2.cpp)
add_executable(1450_3 1450_3.cpp)
add_executable(1377_2 1377_2.cpp)
add_executable(1377_3 1377_3.cpp)
add_executable(1378_2 1378_2.cpp)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
