cmake_minimum_required(VERSION 3.28)
project(xc)

set(CMAKE_CXX_STANDARD 17)

add_executable(xc main.cpp)
add_executable(w18p1 w18p1.cpp)
add_executable(w19p1 w19p1.cpp)
add_executable(w19p2 w19p2.cpp)
add_executable(w18p2 w18p2.cpp)
add_executable(w19p2_2 w19p2_2.cpp)
add_executable(w18p3 w18p3.cpp)
add_executable(w19p3 w19p3.cpp)
add_executable(d14p2 d14p2.cpp)
add_executable(d14p1 d14p1.cpp)
add_executable(d13p1 d13p1.cpp)
add_executable(d13p2 d13p2.cpp)
add_executable(d13p3 d13p3.cpp)
add_executable(d14p3 d14p3.cpp)
add_executable(w18p3_2 w18p3_2.cpp)
add_executable(main2 main2.cpp)
add_executable(w18p3_3 w18p3_3.cpp)